--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   },
   "main": "index.js",
   "dependencies": {
+    "clarifai": "^2.9.1",
     "core-js": "^3.6.4",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -36,7 +39,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "no-console": "off"
+    }
   },
   "browserslist": [
     "> 1%",
