--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "main": "index.js",
   "dependencies": {
     "clarifai": "^2.9.1",
+    "clipboard": "^2.0.6",
     "core-js": "^3.6.4",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-clipboard2": "^0.3.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
