--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
     "clarifai": "^2.9.1",
     "clipboard": "^2.0.6",
     "core-js": "^3.6.4",
@@ -19,6 +22,7 @@
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-clipboard2": "^0.3.1",
+    "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
