--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "start": "nf start",
+    "frontend": "npm run serve",
+    "backend": "nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "main": "index.js",
