--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.5",
-    "mongoose": "^5.9.6"
+    "mongoose": "^5.9.6",
+    "multer": "^1.4.2"
   }
 }
